--- a/JS/index.html
+++ b/JS/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>JavaScript Mastery</h1>
-     <script src="index.js" type="text/javascript"></script>> 
+    <button id="myBtn" type="button" >Button</button>
+     <script src="index.js" type="module"></script>
 </body>
 </html>
