Added Database javascript visualizer

--- a/JS/interview2/index.html
+++ b/JS/interview2/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <h1>(Hello)</h1>
-    <img src="f" alt="hr">
+    <h1 id="hello">(Hello)</h1>
+
+    <script src="second.js">
+
+    </script>
 </body>
 
 </html>
