--- a/JS/index.html
+++ b/JS/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <h1>JavaScript Mastery</h1>
-    <button id="myBtn" type="button">Button</button>
-    <script src="index.js" type="module"></script>
+    <!-- <button id="myBtn" type="button">Button</button> -->
+    <script src="upskill.js"></script>
 </body>
 
 </html>
